syntax = "proto3";

package com.webank.ai.fate.core.mlmodel.buffer;
option java_outer_classname = "FeatureOutliertionParamProto";

message FeatureOutlierParam{
    map<string, string> missing_replace_value = 1;
	  map<string, double> missing_value_ratio = 2;
	  map<string, string> missing_replace_value_type = 3;
	  repeated string skip_cols = 4;
	  map<string, string> col_outlier_fill_method = 5;
	  double outlier_by_std = 6;
	  double outlier_by_quantile = 7;
}


message FeatureOutliertionParam {
    repeated string header = 1;
    FeatureOutlierParam imputer_param = 2;
}
